added api for remove physical storage

--- a/config/api.yml
+++ b/config/api.yml
@@ -2291,6 +2291,8 @@
       :post:
       - :name: refresh
         :identifier: physical_storage_refresh
+      - :name: delete
+        :identifier: storage_delete
   :physical_switches:
     :description: Physical Switches
     :identifier: physical_switch
